Fixed inline datepicker z-index, resolve #3

--- a/src/pickers/_datepicker.scss
+++ b/src/pickers/_datepicker.scss
@@ -31,6 +31,7 @@ body {
   &--inline {
     .mdl-datepicker__widget {
       position: relative;
+      z-index: auto;
     }
   }
 
